--- a/openara/templates/moderate/tags/comment_form.html
+++ b/openara/templates/moderate/tags/comment_form.html
@@ -1,10 +1,10 @@
+<div class="ui divider"></div>
 <h4 class="ui header" >Commenter</h4>
 <form id="review_comment" 
     class="ui form" 
     action="comment/" method="POST" >
     {% csrf_token %}
     <div class="ui field">
-        {{ comment_form.new_comment.label }}
         {{ comment_form.new_comment }}
     </div>
     <button class="ui button" >Commenter</button>
