--- a/openara/templates/we-are-makers.html
+++ b/openara/templates/we-are-makers.html
@@ -277,12 +277,13 @@
                 <header>
                     <h3>Les Bricodeurs</h3>
                 </header>
-                Les bricodeurs est un groupe d'échange et d'entraide autour de projets technologiques. L'objectif de mettre ces connaissances à profit pour aider des projets citoyens et contribuer à la diffusion de la culture numérique.
+                Les bricodeurs est un groupe d'échange et d'entraide autour de projets technologiques. L'objectif est de mettre ces connaissances à profit pour aider des projets citoyens et contribuer à la diffusion de la culture numérique.
 
                 <footer>
                     <ul class="social">
-                        <li><a class="fa fa-facebook solo" href="https://www.facebook.com/groups/1779441092280415/"><span>Facebook</span></a></li>
+                        <li><a class="fa fa-facebook solo" href="https://www.facebook.com/pages/Les-Bricodeurs/130913190581576"><span>Facebook</span></a></li>
                         <li><a class="fa fa-twitter solo" href="https://twitter.com/lesbricodeurs"><span>twitter</span></a></li>
+                        <li><a class="fa fa-group solo" href="http://www.meetup.com/fr/Les-Bricodeurs-technologie-pour-projets-citoyens-de-Lyon/"><span>meetup</span></a></li>
                     </ul>
                 </footer>
             </section>
