--- a/openara/templates/we-are-makers.html
+++ b/openara/templates/we-are-makers.html
@@ -254,7 +254,7 @@
         <div class="list-item col-md-4">
 
                 <section class="box">
-                    <a href="http://www.lesusineslouise.com/" class="image image-full"><img src="/static/we-are-makers/lesusineslouise.png" alt="" /></a>
+                    <a href="http://www.lesusineslouise.com/" class="image image-full"><img src="/static/we-are-makers/lesusineslouise.jpg" alt="" /></a>
                     <header>
                         <h3>Les Usines Louises</h3>
                     </header>
